# Lucarne

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  FEATURE_MAP.md  README.cn.md  README.md
.github/workflows/: release.yml
Formula/: lucarned.rb
agent-sessions/: Cargo.toml
agent-sessions/src/: agent.rs  input.rs  lib.rs  parse_selection.rs  paths.rs  reader.rs  util.rs
agent-sessions/src/agent_session/: mod.rs  projection.rs
agent-sessions/src/providers/: descriptor.rs  mod.rs
agent-sessions/src/watch/: config.rs  event.rs  macos_fsevents.rs  mod.rs  provider.rs  raw.rs  state.rs  tests.rs
agent-sessions/tests/: api_surface.rs  optional_features.rs  parsing.rs  pi_live.rs  reverse_lines.rs  watch_live.rs
crates/lucarne/: Cargo.toml
crates/lucarne-adapter/: Cargo.toml
crates/lucarne-adapter/src/: lib.rs
crates/lucarne-adapter/tests/: contract_boundary.rs
crates/lucarne-channel/: Cargo.toml
crates/lucarne-channel/src/: agent_message.rs  ingest.rs  lib.rs  markdown.rs  robust.rs  splitter.rs  types.rs
crates/lucarne-fakeagent/: Cargo.toml
crates/lucarne-fakeagent/src/: main.rs  signals.rs
crates/lucarne-telegram/: Cargo.toml
crates/lucarne-telegram/src/: adapter.rs  agents.rs  bot.rs  channel.rs  command_sync.rs  history.rs  lib.rs  onboarding.rs  state.rs  tg_bot.rs  turn.rs
crates/lucarne-telegram/src/turn/: projection.rs
crates/lucarne-telegram/tests/: adapter_boundary.rs  topic_routing_integration.rs
crates/lucarne-telegram/tests/fixtures/: watch_notification_live_replay_codex.json
crates/lucarne-wechat/: Cargo.toml
crates/lucarne-wechat/src/: adapter.rs  context_store.rs  intervention.rs  lib.rs  onboarding.rs  service.rs
crates/lucarne-wechat/tests/: context_store.rs
crates/lucarne/src/: adapter.rs  agent_registry.rs  daemon.rs  dialect.rs  error.rs  framer.rs  journal.rs  launcher.rs  lib.rs  observability.rs  provider_id.rs  runtime.rs  time_display.rs
crates/lucarne/src/adapters/: claude.rs  codex.rs  codex_prep.rs  copilot.rs  gemini.rs  grok.rs  mod.rs  pi.rs  version.rs
crates/lucarne/src/agent_runtime/: catalog.rs  error.rs  events.rs  mod.rs  project.rs  provider.rs  provider_args.rs  runtime.rs  session.rs  types.rs
crates/lucarne/src/control_plane/: activation.rs  commands.rs  fork.rs  history_replay.rs  interventions.rs  mod.rs  state.rs  status.rs  store.rs  subagents.rs  turn_queue.rs  types.rs
crates/lucarne/src/core_service/: api.rs  events.rs  mod.rs  service.rs  types.rs
crates/lucarne/src/dialects/: claude.rs  claude_transcript.rs  codex.rs  copilot.rs  gemini.rs  grok_acp.rs  mod.rs  pi_rpc.rs
crates/lucarne/src/event/: command.rs  core.rs  mod.rs  permission.rs  timeline.rs  tool.rs  usage.rs
crates/lucarne/src/history/: index.rs  mod.rs  provider.rs  render.rs  transcript.rs
crates/lucarne/src/host/: mod.rs  paths.rs  proxy_env.rs  unix_tools.rs
crates/lucarne/src/host/file_users/: mod.rs  unix.rs  windows.rs
crates/lucarne/src/host/process/: mod.rs  unix.rs  windows.rs
crates/lucarne/src/host/process_table/: mod.rs  unix.rs  windows.rs
crates/lucarne/src/testing/live/: common.rs  providers.rs  recording.rs  runtime.rs
crates/lucarne/tests/: agent_runtime_bus.rs  agent_runtime_catalog.rs  agent_runtime_commands.rs  agent_runtime_integration.rs  agent_runtime_live_e2e.rs  agent_runtime_multimodal.rs  agent_runtime_projection.rs  agent_runtime_provider.rs  agent_runtime_session.rs  agent_runtime_types.rs  claude_scenarios.rs  claude_transcript.rs  codex_scenarios.rs  control_plane_state.rs  control_plane_store.rs  copilot_scenarios.rs  core_service_boundary.rs  core_service_stress.rs  daemon.rs  gemini_scenarios.rs  grok_scenarios.rs  grok_user_journeys.rs  history.rs  history_index.rs  journey_coverage_manifest.rs  journey_design_targets.rs  live_e2e.rs  live_unit.rs  observability_coverage.rs  pi_scenarios.rs  provider_catalog.rs
crates/lucarne/tests/common/: agent_runtime.rs  mod.rs
crates/lucarne/tests/live/: common.rs  mod.rs  providers.rs  recording.rs  runtime.rs
crates/lucarned/: Cargo.toml
crates/lucarned-ctl/: Cargo.toml
crates/lucarned-ctl/src/: args.rs  doctor.rs  lib.rs  paths.rs  process.rs
crates/lucarned-ctl/src/autostart/: linux.rs  macos.rs  mod.rs  windows.rs
crates/lucarned-ctl/src/updates/: github.rs  mod.rs  render.rs  state.rs  version.rs
crates/lucarned/src/: health.rs  main.rs
crates/lucarned/src/onboarding/: config.rs  mod.rs  session.rs  terminal.rs
docs/: commands.md
docs/adr/: 0001-grok-build-acp-stdio-dialogue.md  0002-grok-build-session-artifacts.md  0003-grok-build-fixture-smoke-and-parity.md  0004-grok-build-full-provider-scope.md
docs/agents/: grok-provider-parity.md
docs/assets/: README.md
docs/decisions/: 2026-05-18-idle-live-history-watch.md  2026-05-18-live-runtime-history-echo.md  2026-05-18-watch-metadata-window.md  2026-05-18-watch-tail-record-streaming.md  2026-05-19-header-poster-composition.md  2026-05-19-notification-cwd-compact-path.md  2026-05-19-watch-attachment-notifications.md  2026-05-19-watch-recent-session-file-targets.md  2026-05-19-wechat-new-command.md  2026-05-24-lazy-control-plane-state.md  2026-05-25-macos-launchagent-cli-path.md  2026-05-25-telegram-command-sync-cache.md  2026-05-28-watch-runtime-session-downgrade.md  2026-06-01-telegram-outbound-notification-policy.md  2026-06-01-turn-queue-fifo-admission.md  2026-06-03-managed-resource-status-live-state.md
docs/superpowers/plans/: 2026-05-18-config-yaml-wechat-help.md  2026-05-19-common-attachment-output.md  2026-05-19-homebrew-binary-release.md  2026-05-20-windows-complete-substrate.md  2026-05-21-linux-support.md  2026-05-21-lucarnedctl-install-autostart.md  2026-05-21-update-awareness.md  2026-05-21-wechat-rate-window-config.md
docs/superpowers/specs/: 2026-05-13-user-behavior-journeys.md  2026-05-18-config-yaml-wechat-help-design.md  2026-05-21-linux-support-design.md  (+8 more)
examples/: lucarned.yaml
scripts/: instruments-lucarned.sh  profile-lucarned-memory.sh
scripts/release/: test_update_homebrew_formula.py  update-homebrew-formula.py
(+247 files in other folders)
