[workspace]
resolver = "2"
default-members = [
    "crates/lucarne",
    "crates/lucarne-adapter",
    "crates/lucarne-channel",
    "crates/lucarne-telegram",
    "crates/lucarne-wechat",
    "crates/lucarned",
    "agent-sessions",
]
members = [
    "crates/lucarne",
    "crates/lucarne-adapter",
    "crates/lucarne-channel",
    "crates/lucarne-fakeagent",
    "crates/lucarne-telegram",
    "crates/lucarne-wechat",
    "crates/lucarned",
    "agent-sessions",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "net", "signal", "fs"] }
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
nix = { version = "0.29", features = ["signal", "process", "fs"] }
tempfile = "3"
once_cell = "1"
smol_str = { version = "0.3.2", features = ["serde"] }
dirs = "5"
walkdir = "2"
serde_yaml = "0.9"
rusqlite = "0.31"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
codegen-units = 256
lto = false
strip = false
debug = "full"
panic = "unwind"
