[package]
name = "lucarne-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-process adapter plugin contract for lucarned."

[dependencies]
lucarne = { path = "../lucarne" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
