[package]
name = "lucarne-fakeagent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lucarne-fakeagent"
path = "src/main.rs"

[dependencies]

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console"] }
