[package]
name = "lucarne-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Telegram channel implementation and bot for lucarne."

[dependencies]
lucarne = { path = "../lucarne" }
lucarne-adapter = { path = "../lucarne-adapter" }
lucarne-channel = { path = "../lucarne-channel" }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
smol_str = { workspace = true }
base64 = "0.22"
reqwest = { workspace = true }
rusqlite = { workspace = true }
frankenstein = { version = "0.50.2", features = ["client-reqwest"] }
tempfile.workspace = true

[dev-dependencies]
agent-sessions = { path = "../../agent-sessions", features = ["discovery", "agent_session", "watch", "codex"] }
dotenvy = "0.15"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
