[package]
name = "lucarne"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent multiplexer: protocol-normalizing daemon for AI agent CLIs."

[features]
default = ["claude", "codex", "copilot", "gemini", "pi"]
claude = []
codex = []
copilot = []
gemini = []
pi = []
memory-profiling = ["agent-sessions/memory-profiling"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
smol_str = { workspace = true }
base64 = "0.22"
rusqlite = { workspace = true }
linkme = "0.3.35"
once_cell = { workspace = true }
agent-sessions = { path = "../../agent-sessions", features = ["discovery", "agent_session", "watch", "claude", "codex", "copilot", "gemini", "pi"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
rusqlite = { workspace = true, features = ["bundled"] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_JobObjects",
  "Win32_System_ProcessStatus",
  "Win32_System_RestartManager",
  "Win32_System_Threading",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
once_cell = { workspace = true }
tempfile = { workspace = true }
